--- a/leadforms/package.json
+++ b/leadforms/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint",
     "wcbuildtemp": "vue-cli-service build --target wc --name my-custom-element ./src/main.js",
     "wcbuild": "vue-cli-service build --target wc --name my-custom-element ./src/App.vue",
-    "singlewebcomponent": "vue-cli-service build --target wc --name my-element src/components/auth/Signup.vue"
+    "singlewebcomponent": "vue-cli-service build --target wc --name my-element src/views/SoftwareForm.vue"
   },
   "dependencies": {
+    "firebase": "^5.4.2",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
