--- a/leadforms/package.json
+++ b/leadforms/package.json
@@ -15,6 +15,7 @@
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-uuid": "^1.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
